# M1

BDD/TD2/: ex.bson  ex.json
BDD/TP5/: REPORT.md  client_btree.sql  client_hash.sql  clients.sql  division.sql  magasin-gros.sql  sous-requete-exemple.sql
Crypto/TD1/: TD1.ipynb  mono.txt  poly.txt
Crypto/TD2/: Hill.txt
Crypto/TD3/: TD3.ipynb
Crypto/TD5/: rsa.py
DesignPattern/: .gitignore  README.txt  build.gradle.kts  settings.gradle.kts
DesignPattern/TD1/: .gitignore  makeSPIJar.sh
DesignPattern/resources/: config.txt
DesignPattern/tmp/: logs.txt
Java/TD0/: .gitignore  settings.gradle.kts
Java/TD1/: RAPPORT.md  REPORT.md  build.gradle.kts  settings.gradle.kts
Java/TD10/: .gitignore  REPORT.md  build.gradle.kts  settings.gradle.kts
Java/TD11/: .gitignore  settings.gradle.kts
Java/TD2/: .gitignore  REPORT.md  build.gradle.kts
Java/TD3/: REPORT.md
Java/TD4/: README.md  REPORT.md
Java/TD5/: REPORT.md
Java/TD6/: REPORT.md  settings.gradle.kts
Java/TD7/: REPORT.md  build.gradle.kts  settings.gradle.kts
Java/TD8/: REPORT.md  build.gradle.kts  settings.gradle.kts
Java/TD9/: build.gradle.kts  settings.gradle.kts
Opti/: REPORT.md  data.lp  ex3.lp  exemple1.lp  generic.py  steelcut.py
Opti/TP-minisat/: sudoku.cnf  sudoku.out  sudoku.py
Opti/lp/: ex1.lp  out.lp  steel.lp
Perl/TP1/: ex3.pl  ex4.pl  ex5.pl  ex6.pl  ex7.pl  ex8.pl  (+2 more)
Projet_Reseau/: RFC_CFP.txt
Python/: TD1.ipynb  dico.py
Reseau/: .gitignore  in.txt  out.txt
TI/tp01/: .gitignore  CMakeLists.txt
TI/tp01/src/: tp1_exo2.cpp  tp1_exo3.cpp  tp1_exo4.cpp
TI/tp03/: CMakeLists.txt
TI/tp03/src/: tp3_exo1.cpp  tp3_exo2.cpp
(+481 files in other folders)
